@@ -165,7 +165,7 @@ REL1_10_9: (released ...)
 - Added 'PageAfterAndBefore' extension
 - Added 'Magic Words' document for tracking all Magic Words, Tags and Parser Functions supported
 - Added 'NS_FILESYSTEM' to 'off-limits' for RegexNamespaceContext functionality.
-TODO!!! FileManager: Corrected issue with 'auto-summary' fix (usage of wrong bitwise operator)
+- FileManager: Corrected issue with 'auto-summary' fix (usage of wrong bitwise operator)
 - Geshi: added 'js' & 'css' tags for Javascript & CSS contents
 - Added parser function 'gettagsection' to MiscParserFunctions extension
 - Added 'RawPageTools' extension
@@ -193,4 +193,8 @@ TODO!!! FileManager: Corrected issue with 'auto-summary' fix (usage of wrong bit
 - WatchRight extension: removed dependency on ExtensionClass, now is 'stub'-enabled
 - Added 'oversight' to the rights being managed  (see Special:Ipblocklist)
 - Article.php: modified 'doDeleteArticle' method so that it does not delete RecentChanges entries (for the replicator)
+- Adjusted 'ViewsourceRight' for 'stubbing'
+- Adjusted 'RawRight' for 'stubbing'
+- Merged functionality of CacheTools in PageFunctions
+- Adjusted 'geshi' for 'stubbing'
 - 
